--- a/templates/index.html
+++ b/templates/index.html
@@ -67,7 +67,7 @@
           {% csrf_token %}     
           <input class="form-control"  type="file" name="fileUpload" />
           <input class="btn btn-default" type="submit" value="fileUpload" />
-          <a href="{% url 'download' %}" style="font-size:18px;color:blue;">下载模板</a>
+          <a href="{% url 'download' %}" style="font-size:18px;color:blue;">download template</a>
             </form>
           
 			<form class="navbar-form navbar-right" role="search" autocomplete="off" onkeydown="if(event.keyCode==13) return false;"> 
