--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 <!doctype html>
 <html>
 <head>
-  <title> MicroOrganismExplorer </title>
+  <title> KGSB </title>
   <script type="text/javascript" src= "/static/js/jquery-3.1.0.min.js"></script>
   <script type="text/javascript" src="/static/js/bootstrap.min.js"></script>
     
